--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -185,6 +185,7 @@
 .input {
     height: 3rem;
     width: 100%;
+    margin: 0;
     padding: 0.375rem 0.75rem;
     border: 1px solid #E0E0E0;
     border-radius: 4px;
@@ -220,7 +221,6 @@
     }
 
     .hero_content a {
-        padding: 0.375rem 1rem;
         border-radius: 4px;
         transition: all .1s ease-in;
         font-size: {{ settings.base_font_size }}px;
