--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -8,7 +8,7 @@ h-128
 {% elsif section.settings.slideshow_height_mobile == 'extra_large' %}
 h-144
 {% elsif section.settings.slideshow_height_mobile == 'fit_screen' %}
-h-screen
+absolute inset-0
 {% endif %}
 {% if section.settings.slideshow_height == 'small' %}
 lg:h-128
