--- a/assets/flickity.css
+++ b/assets/flickity.css
@@ -113,13 +113,13 @@ https://flickity.metafizzy.co
   /* ---- page dots ---- */
   
   .flickity-page-dots {
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     padding: 0;
     margin: 0;
     list-style: none;
     text-align: center;
-    line-height: 1;
+    line-height: 1; 
     bottom: 4%;
   }
   
@@ -130,7 +130,7 @@ https://flickity.metafizzy.co
     width: 7px;
     height: 7px;
     margin: 0 8px;
-    background:white;
+    background: #222222;
     border-radius: 50%;
     opacity: 0.25;
     cursor: pointer;
