--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -45,51 +45,36 @@
                       <span class="icon icon-chevron-down"></span>
                   {% endif %}
               {% endif %}
-              </a>
+              </a> 
 
               {% if link.links != blank %}
               <div class="bg-white shadow-md absolute invisible z-50 dropdown-menu w-60 {% if link.links.size > 1 and link.levels > 1 %} left-0 w-full{% endif %}">
-                    <div class="2xl:max-width mx-auto flex py-4 {% if link.links.size > 1 and link.levels > 1 %}py-8{% endif %} {% if link.levels == 1 %}flex-col px-4{% else %}px-12 space-x-4{% endif %} w-full header_content">
+                    <div class="max-width mx-auto grid grid-cols-2 py-4 {% if link.links.size > 1 and link.levels > 1 %}py-8{% endif %} {% if link.levels == 1 %} flex-col px-4 {% else %} space-x-4{% endif %} w-full header_content">
+                        <div class="grid gap-5 {% if link.links.size == 1 %} grid-cols-1 {% elsif link.links.size == 2 %} grid-cols-2 {% elsif link.links.size == 3 %} grid-cols-3 {% elsif link.links.size >= 4 %} grid-cols-4 {% elsif link.links.size == 5 %} grid-cols-5 {% elsif link.links.size == 6 %} grid-cols-6 {% endif %}">
                         {% for child_link in link.links %}
                         {% if child_link.links == blank %}
                         <div class="w-full py-1.5">
                             <a href="{{ child_link.url }}" class="body-md">{{ child_link.title }}</a>
                         </div>
                         {% else %}
-                            <div class="
-                            {% if link.links.size == 1 %}
-                                w-full
-                            {% elsif link.links.size == 2 %}
-                                w-1/2
-                            {% elsif link.links.size == 3 %}
-                                w-1/3
-                            {% elsif link.links.size == 4 %}
-                                w-1/4
-                            {% elsif link.links.size == 5 %}
-                                w-1/5
-                            {% elsif link.links.size == 6 %}
-                                w-1/6    
-                            {% elsif link.links.size == 7 %}
-                                w-1/7    
-                            {% elsif link.links.size == 8 %}
-                                w-1/8    
-                            {% endif %}">
-                                <a href="{{ child_link.url }}" class="font-semibold heading-xs">{{ child_link.title }}</a>
-                                {% if child_link.links != blank %}
-                                <ul class="grandchild body-md space-y-2 mt-4">
-                                {% for grandchild_link in child_link.links %}
-                                <li>
-                                    <a href="{{ grandchild_link.url }}">{{ grandchild_link.title }}</a>
-                                </li>
-                                {% endfor %}
-                                </ul>
-                                {% endif %}
-                            </div>
+                        <div class="">
+                            <a href="{{ child_link.url }}" class="font-semibold heading-xs">{{ child_link.title }}</a>
+                            {% if child_link.links != blank %}
+                            <ul class="grandchild body-md space-y-2 mt-4">
+                            {% for grandchild_link in child_link.links %} 
+                            <li class="block">
+                                <a href="{{ grandchild_link.url }}">{{ grandchild_link.title }}</a>
+                            </li>
+                            {% endfor %}
+                            </ul>
+                            {% endif %}
+                        </div>
                         {% endif %}
                         {% endfor %}
+                        </div>
                         {% unless link.levels == 1 %}
-                        <div class="w-1/2 flex space-x-4">
-                            <div class="image w-1/2">
+                        <div class="grid gap-5 grid-cols-2">
+                            <div class="image">
                                 <a href="">
                                     <div class="aspect-w-4 aspect-h-5"><img src="//cdn.shopify.com/s/files/1/0534/1744/3492/collections/grain-lamp-jens-fager-muuto__150.jpg?v=1615139001" alt=""></div>
                                 </a>
@@ -97,7 +82,7 @@
                                     <a href="">Get 15% with code "COOK15"</a>
                                 </p>
                             </div>
-                            <div class="image w-1/2">
+                            <div class="image">
                                 <a href="">
                                     <div class="aspect-w-4 aspect-h-5"><img src="//cdn.shopify.com/s/files/1/0534/1744/3492/collections/cbd_812929cf-5c9f-41e0-ba4a-47a1e94be2b7.jpg?v=1615063701" alt=""></div>
                                 </a>
