--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -21,8 +21,9 @@
   <main role="main">
     {{ content_for_layout }}
   </main>
+  {% section 'video' %}
   {% section 'footer' %}
-
+  
   {{ 'jquery.js' | asset_url | script_tag }}
   {{ 'flickity.js' | asset_url | script_tag }} 
   {{ 'application.js' | asset_url | script_tag }} 
