--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -28,72 +28,98 @@
     .content {
          padding-top: 64px;
     }
+
+    #shopify-section-{{ section.id }} .grid-autofit {
+        grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
+    }
+
+    #shopify-section-{{ section.id }} .megamenu-image-width {
+        width: 300px;
+    }
+
+    #shopify-section-{{ section.id }} .megamenu-height {
+        max-height: 70vh;
+    }
 </style>
+
+
 
 <div class="absolute w-full">
   <div class="w-full bg-black bg-opacity-40 absolute top-0 left-0 right-0 bottom-0 h-screen hidden overlaySearch" style="z-index: 5;"></div>
   <div class="bg-white relative z-10 header">
-    <div class="grid grid-cols-3 2xl:container 2xl:mx-auto px-4 2xl:px-0 items-center">
+    <div class="grid grid-cols-3 items-center {% if section.settings.header_width == 'full-width' %} px-3 sm:px-4 lg:6 {% elsif section.settings.header_width == 'content-width' %} max-width mx-auto {% endif %}">
       <nav class="flex h-full items-center justify-start">
-        <ul class="hidden lg:flex h-full">
+        <ul class="hidden -ml-4 lg:flex h-full">
 
           {% for link in linklists[section.settings.header_main_menu].links %}
             <li>
               <a class="flex items-center body-md px-4 space-x-1 h-full truncate" href="{{ link.url }}"><p>{{ link.title }}</p>
               {% if link.links != blank %}
                   {% if linklists[section.settings.header_main_menu].levels > 1 %}
-                      <span class="icon icon-chevron-down"></span>
+                        <span class="icon icon-chevron-down"></span>
                   {% endif %}
               {% endif %}
               </a> 
 
               {% if link.links != blank %}
-              <div class="bg-white shadow-md absolute invisible z-50 dropdown-menu w-60 {% if link.links.size > 1 and link.levels > 1 %} left-0 w-full{% endif %}">
-                    <div class="max-width mx-auto grid grid-cols-2 py-4 {% if link.links.size > 1 and link.levels > 1 %}py-8{% endif %} {% if link.levels == 1 %} flex-col px-4 {% else %} space-x-4{% endif %} w-full header_content">
-                        <div class="grid gap-5 {% if link.links.size == 1 %} grid-cols-1 {% elsif link.links.size == 2 %} grid-cols-2 {% elsif link.links.size == 3 %} grid-cols-3 {% elsif link.links.size >= 4 %} grid-cols-4 {% elsif link.links.size == 5 %} grid-cols-5 {% elsif link.links.size == 6 %} grid-cols-6 {% endif %}">
+              <!-- Ovde ide if za megamenu -->
+              <div class="bg-white shadow-md absolute invisible z-50 dropdown-menu w-60 megamenu-height {% if link.links.size > 1 and link.levels > 1 %} left-0 w-full{% endif %}">
+                    <div class="flex py-4 {% if section.settings.header_width == 'full-width' %} px-3 sm:px-4 lg:6 {% elsif section.settings.header_width == 'content-width' %} max-width mx-auto  {% endif %} {% if link.links.size > 1 and link.levels > 1 %} py-8 {% endif %} {% if link.levels == 1 %} flex-col px-4 {% else %} {% endif %} w-full header_content">
+                        <ul class="flex-1 grid-autofit grid gap-5
+                        
+                        {% if link.links.size == 1 %} grid-cols-1 {% elsif link.links.size == 2 %} grid-cols-2 {% elsif link.links.size == 3 %} grid-cols-3 {% elsif link.links.size >= 4 %} grid-cols-4 {% endif %}">
+                        
                         {% for child_link in link.links %}
                         {% if child_link.links == blank %}
                         <div class="w-full py-1.5">
                             <a href="{{ child_link.url }}" class="body-md">{{ child_link.title }}</a>
                         </div>
                         {% else %}
-                        <div class="">
+                        <li class="inline-block ">
                             <a href="{{ child_link.url }}" class="font-semibold heading-xs">{{ child_link.title }}</a>
                             {% if child_link.links != blank %}
-                            <ul class="grandchild body-md space-y-2 mt-4">
-                            {% for grandchild_link in child_link.links %} 
-                            <li class="block">
-                                <a href="{{ grandchild_link.url }}">{{ grandchild_link.title }}</a>
-                            </li>
-                            {% endfor %}
-                            </ul>
+                                <ul class="grandchild body-md block space-y-2 mt-4">
+                                    {% for grandchild_link in child_link.links %} 
+                                    <li class="block">
+                                        <a href="{{ grandchild_link.url }}">{{ grandchild_link.title }}</a>
+                                    </li>
+                                    {% endfor %}
+                                </ul>
                             {% endif %}
-                        </div>
+                        </li>
                         {% endif %}
                         {% endfor %}
-                        </div>
+                        </ul>
                         {% unless link.levels == 1 %}
-                        <div class="grid gap-5 grid-cols-2">
-                            <div class="image">
-                                <a href="">
-                                    <div class="aspect-w-4 aspect-h-5"><img src="//cdn.shopify.com/s/files/1/0534/1744/3492/collections/grain-lamp-jens-fager-muuto__150.jpg?v=1615139001" alt=""></div>
-                                </a>
-                                <p class="body-md py-4">
-                                    <a href="">Get 15% with code "COOK15"</a>
-                                </p>
+                            {% for block in section.blocks %}
+                            <div class="flex space-x-5 {% if block.settings.header_megamenu_image_position == 'first-column' %} order-first mr-5 {% elsif block.settings.header_megamenu_image_position == 'last-column' %} order-last ml-5 {% endif %}">
+                                <div class="image megamenu-image-width">
+                                    <a href="{{ block.settings.header_megamenu_image_url_1 }}">
+                                        <div class="aspect-w-4 aspect-h-5">
+                                            <img class="object-cover" src="{{ block.settings.header_megamenu_image_1 | img_url: 'master' }}" alt="">
+                                        </div>
+                                    </a>
+                                    <p class="body-md py-4">
+                                        <a href="{{ block.settings.header_megamenu_image_url_1 }}">{{ block.settings.header_megamenu_image_text_1 }}</a>
+                                    </p>
+                                </div>
+
+                                <div class="image megamenu-image-width">
+                                    <a href="{{ block.settings.header_megamenu_image_url_2 }}">
+                                        <div class="aspect-w-4 aspect-h-5">
+                                            <img class="object-cover" src="{{ block.settings.header_megamenu_image_2 | img_url: 'master' }}" alt="">
+                                        </div>
+                                    </a>
+                                    <p class="body-md py-4">
+                                        <a href="{{ block.settings.header_megamenu_image_url_2 }}">{{ block.settings.header_megamenu_image_text_2 }}</a>
+                                    </p>
+                                </div>
                             </div>
-                            <div class="image">
-                                <a href="">
-                                    <div class="aspect-w-4 aspect-h-5"><img src="//cdn.shopify.com/s/files/1/0534/1744/3492/collections/cbd_812929cf-5c9f-41e0-ba4a-47a1e94be2b7.jpg?v=1615063701" alt=""></div>
-                                </a>
-                                <p class="body-md py-4">
-                                    <a href="">Browse our new bed & bath arrivals</a>
-                                </p>
-                            </div>
+                            {% endfor %}
                         </div>
                         {% endunless %}
-                    </div>
               </div>
+              <!-- Ovde se zatvara if -->
               {% endif %}
             </li>
           {% endfor %}
@@ -107,16 +133,16 @@
 
       </nav>
       <div class="flex text-2xl font-semibold justify-center">
-        <a class="py-4" href="/">
-          {% if section.settings.logo != blank %}
+        <a class="py-4" href="{{ routes.root_url }}">
+          {% if section.settings.header_logo != blank %}
             <img class="object-cover" style="height: {{ section.settings.header_logo_height }}px;" src="{{ section.settings.header_logo | img_url: '200x200' }}" alt="{{ shop.name }}">
-          {% elsif section.settings.logo == blank %}
+          {% elsif section.settings.header_logo == blank %}
             {{ shop.name }}
           {% endif %}
         </a>
       </div>
       <div class="flex justify-end space-x-4">
-        <div class="search flex {% if section.settings.show_search == true %} flex {% elsif section.settings.show_search == false %} hidden {% endif %}">
+        <div class="search flex {% if section.settings.header_search_activate == true %} flex {% elsif section.settings.header_search_activate == false %} hidden {% endif %}">
           <span class="text-2xl icon icon-search" aria-hidden="true"></span>
         </div>
         <div class="my-account hidden lg:flex">
@@ -250,6 +276,21 @@
                     "label": "Menu trigger"
                 },
                 {
+                    "type": "select",
+                    "id": "header_megamenu_image_position",
+                    "label": "Position",
+                    "options": [
+                        {
+                            "value": "first-column",
+                            "label": "First column"
+                        },
+                        {
+                            "value": "last-column",
+                            "label": "Last column"
+                        }
+                    ]
+                },
+                {
                     "type": "header",
                     "content": "Image 1"
                 },
@@ -281,21 +322,6 @@
                     "type": "url",
                     "id": "header_megamenu_image_url_1",
                     "label": "Image URL"
-                },
-                {
-                    "type": "select",
-                    "id": "header_megamenu_image_position_1",
-                    "label": "Position",
-                    "options": [
-                        {
-                            "value": "first-column",
-                            "label": "First column"
-                        },
-                        {
-                            "value": "last-column",
-                            "label": "Last column"
-                        }
-                    ]
                 },
                 {
                     "type": "text",
@@ -334,21 +360,6 @@
                     "type": "url",
                     "id": "header_megamenu_image_url_2",
                     "label": "Image URL"
-                },
-                {
-                    "type": "select",
-                    "id": "header_megamenu_image_position_2",
-                    "label": "Position",
-                    "options": [
-                        {
-                            "value": "first-column",
-                            "label": "First column"
-                        },
-                        {
-                            "value": "last-column",
-                            "label": "Last column"
-                        }
-                    ]
                 },
                 {
                     "type": "text",
