--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -209,6 +209,36 @@
     color: #0A0A0A;
 }
 
+.textarea {
+    max-height: 500px;
+    min-height: 150px;
+    width: 100%;
+    margin: 0;
+    padding: 0.375rem 0.75rem;
+    border: 1px solid #E0E0E0;
+    border-radius: 4px;
+    transition: all .1s ease-in;
+    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.1));
+}
+
+.textarea::placeholder {
+    color: #757575;
+}
+
+.textarea:hover {
+    filter: drop-shadow(0px 4px 6px rgba(0, 0, 0, 0.1));
+}
+
+.textarea:focus {
+    outline: none;
+}
+
+.textarea:active {
+    color: #0A0A0A;
+}
+
+
+
 /* HERO */
 @media only screen and (max-width: 768px) {
     .hero_content {
