--- a/sections/blog-template.liquid
+++ b/sections/blog-template.liquid
@@ -1,6 +1,6 @@
 {% assign blog_per_row = section.settings.blog_per_row %}
 
-<div class="2xl:container 2xl:mx-auto 2xl:px-0 px-4 space-y-12 py-12 md:py-16">
+<div class="max-width mx-auto py-12 lg:py-24 space-y-12">
     {% paginate blog.articles by 4 %}
 
     <div class="text-center space-y-4">
