--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -1,4 +1,4 @@
-<div class="main-carousel relative 
+<div class="main-carousel 
 {% if section.settings.slideshow_height_mobile == 'small' %}
 h-80
 {% elsif section.settings.slideshow_height_mobile == 'medium' %}
@@ -8,7 +8,7 @@ h-128
 {% elsif section.settings.slideshow_height_mobile == 'extra_large' %}
 h-144
 {% elsif section.settings.slideshow_height_mobile == 'fit_screen' %}
-absolute inset-0
+h-screen
 {% endif %}
 {% if section.settings.slideshow_height == 'small' %}
 lg:h-128
@@ -35,7 +35,7 @@ data-flickity='{ "imagesLoaded": true,"wrapAround": true
 >
     {% for block in section.blocks %}
         
-        <div class="carousel-cell h-full w-full flex flex-col absolute" id="slide-{{forloop.index}}">
+        <div class="carousel-cell h-full w-full flex flex-col relative" id="slide-{{forloop.index}}">
             <div class="w-full h-full absolute hero_image">
                 <img src="{{ block.settings.slideshow_image | img_url: 'master' }}" id="desktop_slide_{{forloop.index}}" alt="Slide {{ forloop.index }}" class="w-full h-full absolute object-cover 
                 {% if block.settings.slideshow_image_position == 'top' %}
