Video + Rivets currency

--- a/sections/video.liquid
+++ b/sections/video.liquid
@@ -1,11 +1,62 @@
+<h2 class="heading-sm clr-general-headings mb-4 text-center">{{ section.settings.collection_title }}</h2>
 
 <div class="max-width mx-auto h-144 w-full flex justify-center items-center relative"​​​​​​>
     <a class="cursor-pointer flex justify-center items-center h-full w-full z-20 relative" href="" id="play-video">
-        <img src="//cdn.shopify.com/s/files/1/2111/1121/files/pexels-ketut-subiyanto-4546024-3_1800x1000_crop_center.jpg?v=1616679356" class="absolute h-full w-full object-cover object-center" alt="">
+        <img src="{{ section.settings.video | img_url: 'master' }}" class="absolute h-full w-full object-cover object-center" alt="">
         <div class="bg-white h-20 w-20 flex justify-center items-center rounded-full z-30">
             <span aria-hidden="true" class="text-3xl icon icon-play-circle"></span>
         </div>
     </a> 
 
-    <iframe id="video" style="max-width: {{ settings.layout_max_width }}px;" class="absolute w-full h-full" src="//www.youtube.com/embed/9B7te184ZpQ?rel=0" frameborder="0" allowfullscreen></iframe>
+    <div class="absolute w-full h-full" style="max-width: {{ settings.layout_max_width }}px;" id="player"></div>
 </div>
+
+<script type="text/javascript">
+    function youtube_parser(url){
+        var regExp = /.*(?:youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=)([^#\&\?]*).*/;
+        var match = url.match(regExp);
+        return (match&&match[1].length==11)? match[1] : false;
+    }
+
+    var tag = document.createElement('script');
+    tag.src = "//www.youtube.com/player_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+    var videoYTid = youtube_parser("{{ section.settings.video_id }}");
+    function onYouTubeIframeAPIReady() {
+        player = new YT.Player('player', {
+        videoId: videoYTid
+        });
+    }
+</script>
+
+{% schema %}
+{
+    "name": "Video",
+    "settings": [
+      {
+          "type": "text",
+          "id": "collection_title",
+          "label": "Section title",
+          "default": "Designs the whole family can enjoy"
+      },
+      {
+          "type": "image_picker",
+          "id": "video",
+          "label": "Thumbnail"
+      },
+      {
+        "type": "text",
+        "id": "video_id",
+        "label": "Video URL"
+      }
+    ],
+    "presets": [
+        {
+            "category": "Video",
+            "name":"Video"
+        }
+    ]
+  }
+{% endschema %}
