--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -28,7 +28,6 @@
   <main role="main" class="content">
     {{ content_for_layout }}
   </main>
-  {% section 'video' %}
   {% section 'footer' %}
   
   {{ 'jquery.js' | asset_url | script_tag }}
@@ -37,7 +36,7 @@
   {{ 'application.js' | asset_url | script_tag }}
   <!-- Cart.js -->
   {{ 'rivets-cart.min.js' | asset_url | script_tag }}
-  {{ 'cart.min.js' | asset_url | script_tag }}
+  {{ 'option_selection.js' | shopify_asset_url | script_tag }}
   <!-- Initialise Cart.js once the page has loaded -->
   <script type="text/javascript">
     $(function () {
