--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -16,7 +16,7 @@
             <a rv-href="item.url" class="text-sm" rv-text="item.product_title"></a>
             <p class="text-xs text-gray-500" rv-text="item.selected_variant"></p>
           </div>
-          <p class="text-sm" rv-html="item.price | money Currency.currentCurrency"></p>
+          <p class="text-sm" rv-html="item.price | money_with_currency Currency.currentCurrency"></p>
           <div class="quantity flex  items-center">
             <button class="bg-white py-1 px-2 rounded-md border border-black shadow-md" rv-data-cart-update="index | plus 1" rv-data-cart-quantity="item.quantity | minus 1">
               <span aria-hidden="true" class="icon icon-minus"></span>
@@ -40,7 +40,7 @@
       <div class="my-6">
         <div class="flex justify-between">
           <p>{{ 'cart.general.subtotal' | t }}</p>
-          <p rv-html="cart.total_price | money Currency.currentCurrency"></p>
+          <p rv-html="cart.total_price | money_with_currency Currency.currentCurrency"></p>
         </div>
         <div class="flex justify-between">
           <p>{{ 'cart.general.shipping' | t }}</p>
